--- a/po/el.po
+++ b/po/el.po
@@ -4,14 +4,15 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-31 13:59+0800\n"
-"PO-Revision-Date: \n"
-"Last-Translator: George Vasilakos <forfolias@gmail.com>\n"
+"PO-Revision-Date: 2010-04-08 21:27+0200\n"
+"Last-Translator:  <edhunter@sidux.com>\n"
 "Language-Team: Greek\n"
+"Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\\n\\n\\nX-Poedit-Language: Greek"
-"\\nX-Poedit-Country: GREECE\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "<b>Command line to execute:</b>"
@@ -51,7 +52,7 @@ msgstr "Εκτέλεση στο τερματικό"
 
 #: ../data/ui/app-chooser.glade.h:12
 msgid "Installed Application"
-msgstr "Εγκατεστημένες εφαρμογές"
+msgstr "Εγκατεστημένη εφαρμογή"
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "Set selected application as default action of this file type"
@@ -87,7 +88,7 @@ msgstr "Όνομα αρχείου:"
 
 #: ../data/ui/ask-rename.glade.h:7
 msgid "_Overwrite"
-msgstr "_Αντικατάσταση "
+msgstr "_Αντικατάσταση"
 
 #: ../data/ui/ask-rename.glade.h:8
 msgid "_Rename"
@@ -99,7 +100,7 @@ msgstr "_Παράληψη"
 
 #: ../data/ui/ask-rename.glade.h:10
 msgid "with the following file?"
-msgstr "με το ακόλουθο αρχείο"
+msgstr "με το ακόλουθο αρχείο;"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "---"
@@ -107,7 +108,7 @@ msgstr "---"
 
 #: ../data/ui/file-prop.glade.h:2
 msgid "<b>Access Control</b>"
-msgstr "Έλεγχος πρόσβασης"
+msgstr " <b>Έλεγχος πρόσβασης</b>"
 
 #: ../data/ui/file-prop.glade.h:3
 msgid "<b>File Type:</b>"
@@ -238,7 +239,7 @@ msgstr "<b>Προς:</b>"
 #. Preparing to do some file operation (Copy, Move, Delete...)
 #: ../data/ui/progress.glade.h:9
 msgid "Preparing..."
-msgstr "Προετοιμασία ..."
+msgstr "Προετοιμασία..."
 
 #: ../data/ui/preferred-apps.glade.h:1
 msgid "<b>Mail client</b>"
@@ -286,8 +287,8 @@ msgstr ""
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
-msgstr[0] "% u byte"
-msgstr[1] "% u byte"
+msgstr[0] "%u byte"
+msgstr[1] "%u bytes"
 
 #: ../src/base/fm-utils.c:61
 msgid "KB"
@@ -367,7 +368,7 @@ msgstr "Ολοκληρώθηκε"
 
 #: ../src/gtk/fm-progress-dlg.c:401
 msgid ", "
-msgstr ", "
+msgstr " ,"
 
 #: ../src/gtk/fm-progress-dlg.c:416
 msgid "Moving files"
@@ -525,7 +526,7 @@ msgstr "Παρακαλώ επιλέξτε ένα φάκελο"
 
 #: ../src/gtk/fm-gtk-utils.c:385
 msgid "Only system administrators have the permission to do this."
-msgstr "Μόνο ο διαχειριστής του συστήματος έχει δικαίωμα να το κάνει"
+msgstr "Μόνο ο διαχειριστής του συστήματος έχει δικαίωμα να το κάνει."
 
 #: ../src/gtk/fm-gtk-utils.c:461
 msgid "Do you want to move the selected files to trash bin?"
