--- a/src/gtk/exo/README
+++ b/src/gtk/exo/README
@@ -1,4 +1,5 @@
 These files under exo subdir are taken from libexo of XFCE.
+License: LGPL version 2
 The original authors are:
  * Copyright (c) 2008       Jannis Pohlmann <jannis@xfce.org>
  * Copyright (c) 2004-2006  os-cillation e.K.
