* API behavior change: FmDndDest underwent some rework. * Support dropping files into volumes in side-pane.

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2,12 +2,12 @@
 # Copyright (C) 2010 THE libfm'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the libfm package.
 # Og Maciel <ogmaciel@gnome.org>, 2010.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-07 04:12+0000\n"
+"POT-Creation-Date: 2010-04-10 23:58+0800\n"
 "PO-Revision-Date: 2010-01-31 12:27-0500\n"
 "Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
@@ -33,7 +33,8 @@ msgid ""
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
-"<b>Estes cÃÂÃÂÃÂÃÂ³digos especiais podem ser usados na linha de comando:</b>\n"
+"<b>Estes cÃÂÃÂÃÂÃÂ³digos especiais podem ser usados na linha de "
+"comando:</b>\n"
 "  <b>%f</b>: Representa um nome de arquivo ÃÂÃÂÃÂÃÂºnico\n"
 "  <b>%F</b>: Representa vÃÂÃÂÃÂÃÂ¡rios nomes de arquivos\n"
 "  <b>%u</b>: Representa um ÃÂÃÂÃÂÃÂºnico URI de um arquivo\n"
@@ -57,7 +58,9 @@ msgstr "Aplicativo instalado"
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "Set selected application as default action of this file type"
-msgstr "Define o aplicativo selecionado como a aÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o padrÃÂÃÂÃÂÃÂ£o para este tipo de arquivo"
+msgstr ""
+"Define o aplicativo selecionado como a aÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o "
+"padrÃÂÃÂÃÂÃÂ£o para este tipo de arquivo"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Browse"
@@ -69,13 +72,16 @@ msgid ""
 "\n"
 "Do you want to replace the existing file"
 msgstr ""
-"<b>JÃÂÃÂÃÂÃÂ¡ existe um arquivo com este nome nesta localizaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o.</b>\n"
+"<b>JÃÂÃÂÃÂÃÂ¡ existe um arquivo com este nome nesta "
+"localizaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o.</b>\n"
 "\n"
 "VocÃÂÃÂÃÂÃÂª deseja substituir o arquivo atual"
 
 #: ../data/ui/ask-rename.glade.h:4
 msgid "Apply this option to all existing files"
-msgstr "Aplicar esta opÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o em todos os arquivos atuais"
+msgstr ""
+"Aplicar esta opÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o em todos os arquivos "
+"atuais"
 
 #: ../data/ui/ask-rename.glade.h:5
 msgid "Confirm to replace files"
@@ -123,7 +129,8 @@ msgstr "<b>ÃÂÃÂÃÂÃÂltimo acesso:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
 msgid "<b>Last Modification:</b>"
-msgstr "<b>ÃÂÃÂÃÂÃÂltima modificaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o:</b>"
+msgstr ""
+"<b>ÃÂÃÂÃÂÃÂltima modificaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o:</b>"
 
 #: ../data/ui/file-prop.glade.h:7
 msgid "<b>Location:</b>"
@@ -175,15 +182,20 @@ msgstr "Nenhum"
 
 #: ../data/ui/file-prop.glade.h:19
 msgid "Operations that all other users can do"
-msgstr "OperaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµes que todos outros usuÃÂÃÂÃÂÃÂ¡rios podem fazer"
+msgstr ""
+"OperaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµes que todos outros "
+"usuÃÂÃÂÃÂÃÂ¡rios podem fazer"
 
 #: ../data/ui/file-prop.glade.h:20
 msgid "Operations that the owner of the file can do"
-msgstr "OperaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµes que o dono do arquivo pode fazer"
+msgstr ""
+"OperaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµes que o dono do arquivo pode fazer"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Operations that users in the same group as the owner of the file can do"
-msgstr "OperaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµes que usuÃÂÃÂÃÂÃÂ¡rios no mesmo grupo que o dono do arquivo podem fazer"
+msgstr ""
+"OperaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµes que usuÃÂÃÂÃÂÃÂ¡rios no "
+"mesmo grupo que o dono do arquivo podem fazer"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
@@ -265,8 +277,12 @@ msgid "System Applications"
 msgstr "Aplicativos do sistema"
 
 #: ../data/ui/preferred-apps.glade.h:8
-msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
-msgstr "O cliente de e-mail preferido serÃÂÃÂ¡ usado para compor e-mails quando vocÃÂÃÂª clicar nos endereÃÂÃÂ§os de e-mail."
+msgid ""
+"The preferred Mail Client will be used to compose emails when you click on E-"
+"mail addresses."
+msgstr ""
+"O cliente de e-mail preferido serÃÂÃÂ¡ usado para compor e-mails quando "
+"vocÃÂÃÂª clicar nos endereÃÂÃÂ§os de e-mail."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
@@ -327,7 +343,7 @@ msgstr "Lixeira"
 msgid "My Computer"
 msgstr "Meu computador"
 
-#: ../src/base/fm-path.c:445 ../src/gtk/fm-places-view.c:490
+#: ../src/base/fm-path.c:445 ../src/gtk/fm-places-view.c:569
 msgid "Applications"
 msgstr "Aplicativos"
 
@@ -341,7 +357,8 @@ msgstr ": "
 
 #: ../src/gtk/fm-progress-dlg.c:299
 msgid "The file operation is cancelled and there are some errors."
-msgstr "A operaÃÂ§ÃÂ£o do arquivo foi cancelada e aconteceram alguns erros."
+msgstr ""
+"A operaÃÂ§ÃÂ£o do arquivo foi cancelada e aconteceram alguns erros."
 
 #: ../src/gtk/fm-progress-dlg.c:301
 msgid "Cancelled"
@@ -385,15 +402,23 @@ msgstr "Modificando atributos do arquivo"
 
 #: ../src/gtk/fm-file-properties.c:171
 msgid "Please enter a valid user name or numeric id."
-msgstr "Favor digitar um nome de usuÃÂÃÂÃÂÃÂ¡rio ou identificador numÃÂÃÂÃÂÃÂ©rico vÃÂÃÂÃÂÃÂ¡lido."
+msgstr ""
+"Favor digitar um nome de usuÃÂÃÂÃÂÃÂ¡rio ou identificador "
+"numÃÂÃÂÃÂÃÂ©rico vÃÂÃÂÃÂÃÂ¡lido."
 
 #: ../src/gtk/fm-file-properties.c:203
 msgid "Please enter a valid group name or numeric id."
-msgstr "Favor digitar um nome de grupo identificador numÃÂÃÂÃÂÃÂ©rico vÃÂÃÂÃÂÃÂ¡lido."
+msgstr ""
+"Favor digitar um nome de grupo identificador numÃÂÃÂÃÂÃÂ©rico "
+"vÃÂÃÂÃÂÃÂ¡lido."
 
 #: ../src/gtk/fm-file-properties.c:351
-msgid "Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr "VocÃÂÃÂÃÂÃÂª deseja aplicar estas modificaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµes de forma recursiva a todos os arquivos e sub-pastas?"
+msgid ""
+"Do you want to recursively apply these changes to all files and sub-folders?"
+msgstr ""
+"VocÃÂÃÂÃÂÃÂª deseja aplicar estas "
+"modificaÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµes de forma recursiva a todos os "
+"arquivos e sub-pastas?"
 
 #: ../src/gtk/fm-file-properties.c:625
 msgid "Files of different types"
@@ -403,39 +428,39 @@ msgstr "Arquivos de tipos diferentes"
 msgid "Multiple Files"
 msgstr "MÃÂÃÂÃÂÃÂºltiplos arquivos"
 
-#: ../src/gtk/fm-places-view.c:128
+#: ../src/gtk/fm-places-view.c:132
 msgid "Mount Volume"
 msgstr "Montar volume"
 
-#: ../src/gtk/fm-places-view.c:129
+#: ../src/gtk/fm-places-view.c:133
 msgid "Unmount Volume"
 msgstr "Desmontar volume"
 
-#: ../src/gtk/fm-places-view.c:130
+#: ../src/gtk/fm-places-view.c:134
 msgid "Eject Removable Media"
 msgstr "Ejetar mÃÂÃÂÃÂÃÂ­dia removÃÂÃÂÃÂÃÂ­vel"
 
-#: ../src/gtk/fm-places-view.c:143 ../src/gtk/fm-places-view.c:788
+#: ../src/gtk/fm-places-view.c:147 ../src/gtk/fm-places-view.c:876
 msgid "Rename Bookmark Item"
 msgstr "Renomear ÃÂÃÂÃÂÃÂ­tem dos Favoritos"
 
-#: ../src/gtk/fm-places-view.c:144
+#: ../src/gtk/fm-places-view.c:148
 msgid "Remove from Bookmark"
 msgstr "Remover dos Favoritos"
 
-#: ../src/gtk/fm-places-view.c:156
+#: ../src/gtk/fm-places-view.c:160
 msgid "Empty Trash"
 msgstr "Esvaziar lixeira"
 
-#: ../src/gtk/fm-places-view.c:427
+#: ../src/gtk/fm-places-view.c:500
 msgid "Trash"
 msgstr "Lixeira"
 
-#: ../src/gtk/fm-places-view.c:477
+#: ../src/gtk/fm-places-view.c:554
 msgid "Desktop"
 msgstr "ÃÂÃÂÃÂÃÂrea de trabalho"
 
-#: ../src/gtk/fm-places-view.c:789
+#: ../src/gtk/fm-places-view.c:877
 msgid "Enter a new name:"
 msgstr "Digitar um novo nome:"
 
@@ -467,7 +492,7 @@ msgstr "Extrair aqui"
 msgid "Extract To..."
 msgstr "Extrair em..."
 
-#: ../src/gtk/fm-dnd-dest.c:443
+#: ../src/gtk/fm-dnd-dest.c:450
 msgid "XDirectSave failed."
 msgstr "XDirectSave falhou."
 
@@ -483,19 +508,19 @@ msgstr "Executar linhas de comando personalizadas para abrir arquivos"
 msgid "Customize"
 msgstr "Personalizar"
 
-#: ../src/gtk/fm-folder-view.c:473
+#: ../src/gtk/fm-folder-view.c:485
 msgid "Name"
 msgstr "Nome"
 
-#: ../src/gtk/fm-folder-view.c:492
+#: ../src/gtk/fm-folder-view.c:504
 msgid "Description"
 msgstr "DescriÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ£o"
 
-#: ../src/gtk/fm-folder-view.c:499
+#: ../src/gtk/fm-folder-view.c:511
 msgid "Size"
 msgstr "Tamanho"
 
-#: ../src/gtk/fm-folder-view.c:505
+#: ../src/gtk/fm-folder-view.c:517
 msgid "Modified"
 msgstr "Modificado"
 
@@ -517,7 +542,8 @@ msgstr "Somente administradores de sistemas tem permissão para fazer isto."
 
 #: ../src/gtk/fm-gtk-utils.c:461
 msgid "Do you want to move the selected files to trash bin?"
-msgstr "VocÃÂÃÂÃÂÃÂª deseja mover os arquivos selecionados para a lixeira?"
+msgstr ""
+"VocÃÂÃÂÃÂÃÂª deseja mover os arquivos selecionados para a lixeira?"
 
 #: ../src/gtk/fm-gtk-utils.c:478
 msgid "Do you want to delete the selected files?"
@@ -539,10 +565,14 @@ msgstr "VocÃÂÃÂÃÂÃÂª tem certeza que deseja esvaziar a li
 #: ../src/job/fm-dir-list-job.c:325
 #, c-format
 msgid "The specified directory is not valid"
-msgstr "O diretÃÂÃÂÃÂÃÂ³rio especificado nÃÂÃÂÃÂÃÂ£o ÃÂÃÂÃÂÃÂ© vÃÂÃÂÃÂÃÂ¡lido"
+msgstr ""
+"O diretÃÂÃÂÃÂÃÂ³rio especificado nÃÂÃÂÃÂÃÂ£o "
+"ÃÂÃÂÃÂÃÂ© vÃÂÃÂÃÂÃÂ¡lido"
 
 #~ msgid "It's not a valid directory"
-#~ msgstr "NÃÂÃÂÃÂÃÂ£o ÃÂÃÂÃÂÃÂ© um diretÃÂÃÂÃÂÃÂ³rio vÃÂÃÂÃÂÃÂ¡lido"
+#~ msgstr ""
+#~ "NÃÂÃÂÃÂÃÂ£o ÃÂÃÂÃÂÃÂ© um diretÃÂÃÂÃÂÃÂ³rio "
+#~ "vÃÂÃÂÃÂÃÂ¡lido"
 
 #~ msgid "The selection mode"
 #~ msgstr "Favor selecionar uma pasta"
